# yaml_master

./: .gitignore  Cargo.toml  Cross.toml  README.md  sample.yaml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.cross-musl  Dockerfile.cross-musl-aarch64  Dockerfile.cross-musl-armv7  Dockerfile.musl
docs/: BUILD.md
scripts/: build-all.ps1  build-musl.sh
src/: app.rs  clipboard.rs  input.rs  main.rs  search.rs  ui.rs  widgets.rs  yaml_model.rs
